webapp/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: treasury-news-web
  labels:
    app: treasury-news-web
spec:
  selector:
    app: treasury-news-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
